--- a/process_train.ipynb
+++ b/process_train.ipynb
@@ -643,7 +643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 232,
    "metadata": {},
    "outputs": [
     {
@@ -681,7 +681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 233,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -697,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 234,
    "metadata": {},
    "outputs": [
     {
@@ -706,7 +706,7 @@
        "51"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 234,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -717,7 +717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 235,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -732,7 +732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 236,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -751,7 +751,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 237,
    "metadata": {},
    "outputs": [
     {
@@ -760,7 +760,7 @@
        "MultinomialNB(alpha=1.0, class_prior=None, fit_prior=True)"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 237,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -773,7 +773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 238,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -783,7 +783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 239,
    "metadata": {},
    "outputs": [
     {
@@ -799,12 +799,13 @@
    ],
    "source": [
     "print('Top 1 accuracy:\\n', top_n_accuracy(y_val, nb_probs, 1))\n",
-    "print('Top 5 accuracy:\\n', top_n_accuracy(y_val, nb_probs, 5))"
+    "print('Top 5 accuracy:\\n', top_n_accuracy(y_val, nb_probs, 5))\n",
+    "print(classification_report())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 240,
    "metadata": {},
    "outputs": [
     {
@@ -816,7 +817,7 @@
        "     verbose=0)"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 240,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -829,31 +830,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 241,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0.65161290322580645"
-      ]
-     },
-     "execution_count": 53,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.651612903226\n",
+      "             precision    recall  f1-score   support\n",
+      "\n",
+      "          0       0.00      0.00      0.00         5\n",
+      "          1       0.00      0.00      0.00         7\n",
+      "          2       0.39      0.47      0.43        55\n",
+      "          3       0.85      0.63      0.72        27\n",
+      "          4       0.93      0.56      0.70        50\n",
+      "          5       0.67      0.71      0.69        98\n",
+      "          6       0.91      0.70      0.79        44\n",
+      "          7       0.81      0.64      0.72        59\n",
+      "          8       0.38      0.42      0.39        36\n",
+      "          9       0.68      0.70      0.69       155\n",
+      "         10       0.25      0.33      0.29         6\n",
+      "         11       0.76      0.82      0.79       122\n",
+      "         12       0.21      0.21      0.21        28\n",
+      "         13       1.00      0.78      0.88        18\n",
+      "         14       0.61      0.71      0.66       145\n",
+      "         15       0.70      0.69      0.69        77\n",
+      "         16       0.94      0.68      0.79        47\n",
+      "         17       0.79      0.95      0.86        20\n",
+      "         18       0.86      0.91      0.89        47\n",
+      "         19       0.60      0.55      0.57        86\n",
+      "         20       0.67      1.00      0.80         2\n",
+      "         21       0.85      0.59      0.70        39\n",
+      "         22       0.62      0.57      0.59        23\n",
+      "         23       0.55      0.57      0.56        87\n",
+      "         24       0.50      0.25      0.33         4\n",
+      "         25       0.42      0.62      0.50        77\n",
+      "         26       0.62      0.69      0.65       124\n",
+      "         27       1.00      0.50      0.67         2\n",
+      "         28       0.70      0.41      0.52        17\n",
+      "         29       0.25      0.18      0.21        17\n",
+      "         30       0.57      0.47      0.51        73\n",
+      "         31       0.60      0.69      0.65       117\n",
+      "         32       0.79      0.75      0.77        20\n",
+      "         33       0.68      0.64      0.66       104\n",
+      "         34       0.72      0.83      0.77        69\n",
+      "         35       0.73      0.41      0.52        27\n",
+      "         36       0.58      0.66      0.62       134\n",
+      "         37       0.50      0.14      0.22         7\n",
+      "         38       0.72      0.54      0.62        52\n",
+      "         39       0.54      0.27      0.36        26\n",
+      "         40       0.71      0.69      0.70        42\n",
+      "         41       0.51      0.62      0.56        42\n",
+      "         42       0.64      0.51      0.57        97\n",
+      "         43       0.67      0.67      0.67         3\n",
+      "         44       0.89      0.76      0.82        71\n",
+      "         45       0.50      0.36      0.42        22\n",
+      "         46       0.69      0.79      0.73        14\n",
+      "         47       0.84      0.89      0.86       118\n",
+      "         48       0.54      0.62      0.58        61\n",
+      "         49       0.71      0.80      0.75       125\n",
+      "         50       0.51      0.48      0.49        42\n",
+      "\n",
+      "avg / total       0.66      0.65      0.65      2790\n",
+      "\n"
+     ]
     }
    ],
    "source": [
     "svm_predictions = svm.predict(X_val_vectors)\n",
     "\n",
     "from sklearn.metrics import accuracy_score\n",
+    "from sklearn.metrics import classification_report\n",
     "\n",
-    "accuracy_score(y_val, svm_predictions)"
+    "print(accuracy_score(y_val, svm_predictions))\n",
+    "print(classification_report(y_val, svm_predictions))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 192,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -866,25 +922,26 @@
     "tokens = None\n",
     "for text, label in zip(X_train, y_train):\n",
     "    text = text.lower()\n",
-    "    tokens = utils.simple_preprocess(text)    tagged_documents.append(TaggedDocument(tokens, [label]))"
+    "    tokens = utils.simple_preprocess(text)\n",
+    "    tagged_documents.append(TaggedDocument(tokens, [label]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 193,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[TaggedDocument(words=['going', 'spam', 'links', 'zsh'], tags=[50]),\n",
-       " TaggedDocument(words=['citus', 'works'], tags=[9]),\n",
-       " TaggedDocument(words=['framework', 'building', 'websites', 'express', 'handlebars', 'mysql'], tags=[35]),\n",
-       " TaggedDocument(words=['just', 'mempty', 'gt'], tags=[23]),\n",
-       " TaggedDocument(words=['paul', 'vixie', 'dns', 'fame', 'keynote', 'postgresopen', 'sv'], tags=[9])]"
+       "[TaggedDocument(words=['what', 'is', 'going', 'on', 'with', 'spam', 'links', 'on', 'zsh'], tags=[50]),\n",
+       " TaggedDocument(words=['how', 'citus', 'works'], tags=[9]),\n",
+       " TaggedDocument(words=['framework', 'for', 'building', 'websites', 'express', 'handlebars', 'mysql'], tags=[35]),\n",
+       " TaggedDocument(words=['just', 'mempty', 'gt', 'nothing'], tags=[23]),\n",
+       " TaggedDocument(words=['paul', 'vixie', 'of', 'dns', 'fame', 'to', 'keynote', 'postgresopen', 'sv'], tags=[9])]"
       ]
      },
-     "execution_count": 182,
+     "execution_count": 193,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -895,7 +952,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 194,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -904,16 +961,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 195,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1046423"
+       "1316832"
       ]
      },
-     "execution_count": 184,
+     "execution_count": 195,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -925,7 +982,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 196,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -934,7 +991,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 197,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -943,7 +1000,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 198,
    "metadata": {},
    "outputs": [
     {
@@ -952,7 +1009,7 @@
        "(8369, 64)"
       ]
      },
-     "execution_count": 187,
+     "execution_count": 198,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -963,7 +1020,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 199,
    "metadata": {},
    "outputs": [
     {
@@ -975,7 +1032,7 @@
        "     verbose=0)"
       ]
      },
-     "execution_count": 188,
+     "execution_count": 199,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -988,7 +1045,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 200,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1005,7 +1062,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 201,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1014,24 +1071,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 225,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0.49713261648745521"
-      ]
-     },
-     "execution_count": 191,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.519713261649\n",
+      "             precision    recall  f1-score   support\n",
+      "\n",
+      "          0       0.00      0.00      0.00         5\n",
+      "          1       0.00      0.00      0.00         7\n",
+      "          2       0.35      0.33      0.34        55\n",
+      "          3       0.00      0.00      0.00        27\n",
+      "          4       0.80      0.48      0.60        50\n",
+      "          5       0.62      0.61      0.62        98\n",
+      "          6       0.50      0.34      0.41        44\n",
+      "          7       0.60      0.68      0.63        59\n",
+      "          8       0.00      0.00      0.00        36\n",
+      "          9       0.49      0.67      0.56       155\n",
+      "         10       0.00      0.00      0.00         6\n",
+      "         11       0.61      0.69      0.65       122\n",
+      "         12       0.00      0.00      0.00        28\n",
+      "         13       0.82      0.50      0.62        18\n",
+      "         14       0.42      0.57      0.49       145\n",
+      "         15       0.57      0.65      0.61        77\n",
+      "         16       1.00      0.02      0.04        47\n",
+      "         17       0.86      0.95      0.90        20\n",
+      "         18       0.83      0.85      0.84        47\n",
+      "         19       0.51      0.53      0.52        86\n",
+      "         20       0.00      0.00      0.00         2\n",
+      "         21       0.86      0.49      0.62        39\n",
+      "         22       0.00      0.00      0.00        23\n",
+      "         23       0.39      0.36      0.37        87\n",
+      "         24       0.00      0.00      0.00         4\n",
+      "         25       0.40      0.44      0.42        77\n",
+      "         26       0.45      0.67      0.54       124\n",
+      "         27       0.00      0.00      0.00         2\n",
+      "         28       0.57      0.24      0.33        17\n",
+      "         29       0.00      0.00      0.00        17\n",
+      "         30       0.43      0.42      0.43        73\n",
+      "         31       0.54      0.57      0.56       117\n",
+      "         32       1.00      0.15      0.26        20\n",
+      "         33       0.55      0.66      0.60       104\n",
+      "         34       0.70      0.83      0.76        69\n",
+      "         35       0.00      0.00      0.00        27\n",
+      "         36       0.46      0.57      0.51       134\n",
+      "         37       0.00      0.00      0.00         7\n",
+      "         38       0.62      0.58      0.60        52\n",
+      "         39       0.00      0.00      0.00        26\n",
+      "         40       0.63      0.69      0.66        42\n",
+      "         41       0.37      0.31      0.34        42\n",
+      "         42       0.44      0.47      0.46        97\n",
+      "         43       0.00      0.00      0.00         3\n",
+      "         44       0.75      0.70      0.72        71\n",
+      "         45       0.00      0.00      0.00        22\n",
+      "         46       0.00      0.00      0.00        14\n",
+      "         47       0.63      0.84      0.72       118\n",
+      "         48       0.34      0.21      0.26        61\n",
+      "         49       0.40      0.70      0.51       125\n",
+      "         50       0.47      0.33      0.39        42\n",
+      "\n",
+      "avg / total       0.49      0.52      0.49      2790\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/victorkwak/anaconda3/lib/python3.6/site-packages/sklearn/metrics/classification.py:1135: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples.\n",
+      "  'precision', 'predicted', average, warn_for)\n"
+     ]
     }
    ],
    "source": [
     "from sklearn.metrics import accuracy_score\n",
     "\n",
-    "accuracy_score(y_val, svm_predictions)"
+    "print(accuracy_score(y_val, svm_predictions))\n",
+    "print(classification_report(y_val, svm_predictions))"
    ]
   },
   {
@@ -1150,67 +1269,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 221,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[[('22', 0.521484)],\n",
-       " [('29', 0.712891)],\n",
-       " [('15', 0.259766)],\n",
-       " [('12', 0.988281)],\n",
-       " [('23', 0.900391)],\n",
-       " [('50', 0.412109)],\n",
-       " [('22', 0.521484)],\n",
-       " [('15', 0.259766)],\n",
-       " [('22', 0.521484)],\n",
-       " [('22', 0.521484)],\n",
-       " [('29', 0.712891)],\n",
-       " [('22', 0.431641)],\n",
-       " [('22', 0.431641)],\n",
-       " [('30', 0.955078)],\n",
-       " [('50', 0.412109)],\n",
-       " [('15', 0.259766)],\n",
-       " [('22', 0.521484)],\n",
-       " [('22', 0.521484)],\n",
-       " [('50', 0.412109)],\n",
-       " [('15', 0.259766)],\n",
-       " [('22', 0.521484)],\n",
-       " [('22', 0.521484)],\n",
-       " [('22', 0.521484)],\n",
-       " [('22', 0.376953)],\n",
-       " [('22', 0.521484)],\n",
-       " [('25', 0.574219)],\n",
-       " [('30', 0.623047)],\n",
-       " [('22', 0.521484)],\n",
-       " [('22', 0.429688)],\n",
-       " [('34', 0.720703)],\n",
-       " [('22', 0.521484)],\n",
-       " [('22', 0.521484)],\n",
-       " [('22', 0.521484)],\n",
-       " [('12', 0.988281)],\n",
-       " [('25', 0.574219)],\n",
-       " [('29', 0.712891)],\n",
-       " [('49', 0.3125)],\n",
-       " [('22', 0.521484)],\n",
-       " [('22', 0.521484)],\n",
-       " [('22', 0.521484)],\n",
-       " [('22', 0.521484)],\n",
-       " [('22', 0.431641)],\n",
-       " [('22', 0.521484)],\n",
-       " [('22', 0.521484)],\n",
-       " [('22', 0.521484)],\n",
-       " [('30', 0.623047)]]"
+       "array([8, 8])"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 221,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "classifier.predict_proba('Function Currying in C (lame), Because Boredom')"
+    "def fasttext_predictions(X, model):\n",
+    "    predictions = []\n",
+    "    for text in X:\n",
+    "        predictions.append(int(model.predict(text)[0][0][0]))\n",
+    "    return np.array(predictions)\n",
+    "\n",
+    "fasttext_predictions = fasttext_predictions(X_val, classifier)\n",
+    "fasttext_predictions[:2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 222,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.012903225806451613"
+      ]
+     },
+     "execution_count": 222,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "accuracy_score(y_val, fasttext_predictions)"
    ]
   },
   {
