--- a/process_train.ipynb
+++ b/process_train.ipynb
@@ -783,7 +783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": 243,
    "metadata": {},
    "outputs": [
     {
@@ -793,14 +793,78 @@
       "Top 1 accuracy:\n",
       " 0.505734767025\n",
       "Top 5 accuracy:\n",
-      " 0.688888888889\n"
+      " 0.688888888889\n",
+      "             precision    recall  f1-score   support\n",
+      "\n",
+      "          0       0.00      0.00      0.00         5\n",
+      "          1       0.00      0.00      0.00         7\n",
+      "          2       0.69      0.16      0.26        55\n",
+      "          3       0.00      0.00      0.00        27\n",
+      "          4       1.00      0.18      0.31        50\n",
+      "          5       0.70      0.63      0.67        98\n",
+      "          6       0.80      0.18      0.30        44\n",
+      "          7       0.95      0.32      0.48        59\n",
+      "          8       0.00      0.00      0.00        36\n",
+      "          9       0.34      0.81      0.48       155\n",
+      "         10       0.00      0.00      0.00         6\n",
+      "         11       0.64      0.75      0.69       122\n",
+      "         12       0.00      0.00      0.00        28\n",
+      "         13       1.00      0.39      0.56        18\n",
+      "         14       0.26      0.87      0.40       145\n",
+      "         15       0.83      0.65      0.73        77\n",
+      "         16       1.00      0.06      0.12        47\n",
+      "         17       0.95      0.90      0.92        20\n",
+      "         18       1.00      0.45      0.62        47\n",
+      "         19       0.72      0.44      0.55        86\n",
+      "         20       0.00      0.00      0.00         2\n",
+      "         21       0.89      0.21      0.33        39\n",
+      "         22       0.00      0.00      0.00        23\n",
+      "         23       0.86      0.28      0.42        87\n",
+      "         24       0.00      0.00      0.00         4\n",
+      "         25       0.79      0.40      0.53        77\n",
+      "         26       0.29      0.81      0.43       124\n",
+      "         27       0.00      0.00      0.00         2\n",
+      "         28       0.00      0.00      0.00        17\n",
+      "         29       0.00      0.00      0.00        17\n",
+      "         30       0.96      0.32      0.47        73\n",
+      "         31       0.67      0.63      0.65       117\n",
+      "         32       1.00      0.15      0.26        20\n",
+      "         33       0.63      0.62      0.62       104\n",
+      "         34       0.72      0.83      0.77        69\n",
+      "         35       0.00      0.00      0.00        27\n",
+      "         36       0.47      0.63      0.54       134\n",
+      "         37       0.00      0.00      0.00         7\n",
+      "         38       1.00      0.12      0.21        52\n",
+      "         39       0.00      0.00      0.00        26\n",
+      "         40       0.89      0.40      0.56        42\n",
+      "         41       0.91      0.24      0.38        42\n",
+      "         42       0.67      0.48      0.56        97\n",
+      "         43       0.00      0.00      0.00         3\n",
+      "         44       0.92      0.63      0.75        71\n",
+      "         45       0.00      0.00      0.00        22\n",
+      "         46       0.00      0.00      0.00        14\n",
+      "         47       0.64      0.94      0.76       118\n",
+      "         48       1.00      0.10      0.18        61\n",
+      "         49       0.46      0.88      0.60       125\n",
+      "         50       0.80      0.10      0.17        42\n",
+      "\n",
+      "avg / total       0.61      0.51      0.47      2790\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/victorkwak/anaconda3/lib/python3.6/site-packages/sklearn/metrics/classification.py:1135: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples.\n",
+      "  'precision', 'predicted', average, warn_for)\n"
      ]
     }
    ],
    "source": [
     "print('Top 1 accuracy:\\n', top_n_accuracy(y_val, nb_probs, 1))\n",
     "print('Top 5 accuracy:\\n', top_n_accuracy(y_val, nb_probs, 5))\n",
-    "print(classification_report())"
+    "print(classification_report(y_val, nb_predictions))"
    ]
   },
   {
