rm test notebook

--- a/Fasttext_via_Keras.ipynb
+++ b/Fasttext_via_Keras.ipynb
@@ -1043,7 +1043,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 154,
    "metadata": {
     "scrolled": false
    },
@@ -1070,7 +1070,21 @@
       "Epoch 8/1000\n",
       "59364/59364 [==============================] - 7s 124us/step - loss: 1.0024 - acc: 0.8106 - val_loss: 2.1555 - val_acc: 0.4955\n",
       "Epoch 9/1000\n",
-      "49900/59364 [========================>.....] - ETA: 1s - loss: 0.8130 - acc: 0.8505"
+      "59364/59364 [==============================] - 7s 124us/step - loss: 0.8080 - acc: 0.8501 - val_loss: 2.1227 - val_acc: 0.5000\n",
+      "Epoch 10/1000\n",
+      "59364/59364 [==============================] - 7s 125us/step - loss: 0.6535 - acc: 0.8800 - val_loss: 2.1019 - val_acc: 0.5041\n",
+      "Epoch 11/1000\n",
+      "59364/59364 [==============================] - 7s 125us/step - loss: 0.5317 - acc: 0.9028 - val_loss: 2.0962 - val_acc: 0.5062\n",
+      "Epoch 12/1000\n",
+      "59364/59364 [==============================] - 7s 115us/step - loss: 0.4357 - acc: 0.9192 - val_loss: 2.0987 - val_acc: 0.5073\n",
+      "Epoch 13/1000\n",
+      "59364/59364 [==============================] - 7s 119us/step - loss: 0.3601 - acc: 0.9326 - val_loss: 2.1088 - val_acc: 0.5057\n",
+      "Epoch 14/1000\n",
+      "59364/59364 [==============================] - 7s 114us/step - loss: 0.3040 - acc: 0.9460 - val_loss: 2.1096 - val_acc: 0.5061\n",
+      "Epoch 15/1000\n",
+      "59364/59364 [==============================] - 7s 114us/step - loss: 0.2982 - acc: 0.9471 - val_loss: 2.1114 - val_acc: 0.5061\n",
+      "Epoch 16/1000\n",
+      "59364/59364 [==============================] - 7s 114us/step - loss: 0.2922 - acc: 0.9479 - val_loss: 2.1130 - val_acc: 0.5060\n"
      ]
     }
    ],
@@ -1123,16 +1137,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.77694678861994038"
+       "0.77785638486027586"
       ]
      },
-     "execution_count": 153,
+     "execution_count": 155,
      "metadata": {},
      "output_type": "execute_result"
     }
